# A2A-mini-guide-and-project

./: README.md
A2A by GK/A2A for image generation/: LICENSE  README.md  pyproject.toml
A2A by GK/A2A for image generation/src/: agent.py  server.py  web_agent.py
A2A by GK/A2A for image generation/src/mcp_image_agent/: __init__.py  agent.py  server.py  web_agent.py
A2A by GK/A2A learning/: ai-agent-intensive-course-day-1a.ipynb  ai-agent-intensive-course-day-1b.ipynb  ai-agent-intensive-course-day-2a.ipynb  ai-agent-intensive-course-day-2b.ipynb  ai-agent-intensive-course-day-3b.ipynb  ai-agent-intensive-course-day-4a.ipynb  ai-agent-intensive-course-day-4b.ipynb  ai-agent-intensive-course-day-5a.ipynb  ai-agent-intensive-course-day-5b.ipynb  ai-agent-intensivev-course-day-3a.ipynb
